testsuite/tests/rename/should_fail/rnfail049.stderr

rnfail049.hs:12:49: error: [GHC-88464]
    Variable not in scope: f :: [a] -> [[a]]
